<resources>
    <string name="app_name">Prueba Tecniva</string>

    <!-- Titles -->
    <string name="title_error">¡Upppsss!</string>
    <string name="title_persons">Personas</string>
    <string name="title_movies">Películas</string>
    <string name="title_movies_favorites">Pel. Favoritas</string>
    <string name="title_notes">Nueva Nota</string>
    <string name="title_upload_images">Subir Fotos</string>
    <string name="general_accept">Aceptar</string>

    <!-- Dialog movies -->
    <string name="dialog_movies_title">Título de la película:</string>
    <string name="dialog_movies_adult">Es para Adultos:</string>
    <string name="dialog_movies_original_language">Lenguaje original:</string>
    <string name="dialog_movies_original_title">Título original:</string>
    <string name="dialog_movies_overview">Reseña:</string>
    <string name="dialog_movies_release_date">Fecha de estreno:</string>
    <string name="dialog_movies_rating">Popularidad:</string>
    <string name="dialog_movies_vote">Votos:</string>
    <string name="search">Buscar...</string>
    <string name="filter">Filtrar...</string>
    <string name="database_name">BaseLocal</string>

    <!-- People Dialog -->
    <string name="item_label_name">Nombre:</string>
    <string name="item_label_description">Reseña:</string>
    <string name="item_label_original_title">Título Original:</string>
    <string name="item_label_release_date">Fecha de estreno:</string>
    <string name="item_label_know_for">Conocida(o) por:</string>
    <string name="item_label_gender">Género:</string>
    <string name="item_label_popularity">Popularidad:</string>
    <string name="item_label_movies">Participaciones:</string>
    <string name="item_chip_favorites">Agregar Favoritos</string>

    <!-- Favorite Card -->
    <string name="item_chip_favorites_delete">Eliminar de Favoritos</string>
    <string name="item_label_fav_name">Nombre:</string>
    <string name="item_label_fav_description">Reseña:</string>
    <string name="item_label_fav_original_title">Usuario:</string>
    <string name="item_label_fav_release_date">Fecha que se agregó a fav:</string>

    <!-- Toast Messages -->
    <string name="toast_movie_added">Película: %1$s está en fav.</string>
    <string name="toast_movie_deleted">Película: %1$s se removió de fav.</string>

    <!-- Filter Dialog -->
    <string name="filter_title">Elije un filtro</string>
    <string name="filter_option_title">Título</string>
    <string name="filter_option_content">Contenido</string>
    <string name="filter_option_author">Autor</string>

    <!-- Errors -->
    <string name="err_missing_permissions">No contamos con permisos para acceder a tu galeria, por favor otorga permisos, para continuar</string>
    <string name="err_no_image_choose">Canceló la selección de imagen</string>

    <!-- Generic-->
    <string name="no_internet">No hay conexión a Internet</string>
    <string name="male">Hombre</string>
    <string name="female">Mujer</string>
    <string name="no_data">Sin Título</string>
    <string name="not">No</string>
    <string name="yes">Yes</string>
    <string name="content_desc">Icons</string>
    <string name="permission_request">Pidiendo permiso...</string>
    <string name="permission_granted">Permisos otorgados...</string>
    <string name="ucrop_title">Edita la imagen...</string>
    <string name="image_picker_folder_name">AppTestImages</string>
</resources>